--- a/simple/deploy.yaml
+++ b/simple/deploy.yaml
@@ -2,10 +2,12 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx
+  labels:
+    name: nginx
 spec:
   containers:
     - name: nginx
       image: nginx
       ports:
         - containerPort: 80
-          hostPort: 8086
+          # hostPort: 8086
